--- a/week-08/day4/src/main/resources/application.properties
+++ b/week-08/day4/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.show-sql=true
